--- a/StephanieKeil3.14/app/containers/Connect/style.css
+++ b/StephanieKeil3.14/app/containers/Connect/style.css
@@ -1,9 +1,21 @@
 /* Connect Styles */
 
-.container {
+.page {
+  font-family: Verdana;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
   min-height: 100vh;
+  width: 100%;
+  /* border:blue solid 2px; */
+}
+
+.me {
+  /* border: hotpink solid 2px; */
+  max-width: 50%;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-around;
 }
 
 .image {
@@ -12,33 +24,50 @@
   height: 300px;
 }
 
-.page{
-  font-family: Verdana;
-  display:flex;
-  justify-content: space-around;
-  /* border:blue solid 2px; */
-}
-.me{
-  /* border:hotpink solid 2px; */
-  max-width: 50%;
-  flex-direction: column;
-  align-content:center;
-  justify-content: space-around;
-}
-
-.logos{
+.logos {
   display: flex;
   justify-content: space-evenly;
-
+  align-items: center;
+  /* border: blue 1px solid; */
 }
 
-.contact{
-  max-width: 50%;
-  display:flex;
+.contact {
+  width: 400px;
+  display: flex;
   flex-direction: column;
-
+  /* border: hotpink 2px solid; */
+  padding: 50px 5px 5px 5px;
 }
 
-p{
-  margin: 5px;
+textarea {
+  height: 150px;
 }
+
+input[type=text],textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+  font-size: 1.2em;
+}
+
+input[type=submit] {
+  background-color: #404040;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+input[type=submit]:hover {
+  background-color: white;
+  color: #404040;
+  border: #404040 3px solid;
+}
+
