--- a/outabout/outAboutDeploy/public/css/outAbout.css
+++ b/outabout/outAboutDeploy/public/css/outAbout.css
@@ -115,5 +115,9 @@ dd{
 }
 
 .col-md-8{
-    padding-top: 25px;
+    padding-top: 15px;
+    /* border: 2px hotpink solid; */
+}
+.col-md-4{
+    padding-left: 30px;
 }
