--- a/StephanieKeil3.14/app/containers/Connect/style.css
+++ b/StephanieKeil3.14/app/containers/Connect/style.css
@@ -15,21 +15,42 @@
   max-width: 50%;
   display:flex;
   flex-direction: column;
-  align-content: center;
+  align-items: center;
   height: auto;
+  padding-top:15px;
 }
 
-.image {
-  margin: 50px 50px 25px 50px;
-  border-radius: 8px;
-  height: 300px;
-}
-
-.logos {
+.pictureFrame
+{
   display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 200px;
+}
+.image {
+
+  border-radius: 8px;
+  height: auto;
+  width: 100%;
+}
+
+.logoFrame {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   /* border: blue 1px solid; */
+}
+
+.connect
+{
+  padding: 20px 0px 0px 0px;
+  text-align: center;
+}
+.logo{
+  height:auto;
+  width:auto;
+  margin:5px;
 }
 
 .contact {
@@ -72,4 +93,3 @@ input[type=submit]:hover {
   color: #404040;
   border: #404040 3px solid;
 }
-
