--- a/StephanieKeil3.14/app/containers/Connect/styleM.css
+++ b/StephanieKeil3.14/app/containers/Connect/styleM.css
@@ -1,14 +1,13 @@
 /* Connect Mobile Styles */
 
 @media(max-width:800px) {
-  .page {
+  .pageC {
     padding-top: 50px;
   }
 
 }
 
 @media(max-width:400px) {
- 
   .pictureFrame {
     width: 125px;
   }
