--- a/StephanieKeil3.14/app/containers/Connect/style.css
+++ b/StephanieKeil3.14/app/containers/Connect/style.css
@@ -1,5 +1,5 @@
 /* Connect Styles */
-.page {
+.pageC {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   display: flex;
   flex-direction: row;
@@ -7,6 +7,7 @@
   flex-wrap: wrap;
   min-height: 100vh;
   width: 100%;
+  top:20px;
   /* border:blue solid 2px; */
 }
 
