--- a/StephanieKeil3.14/app/components/Slider/style.css
+++ b/StephanieKeil3.14/app/components/Slider/style.css
@@ -1,5 +1,13 @@
 /* Slider Styles */
-
+.sliderHome
+{
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: flex-start;
+  height:100vh;
+  width: 100%;
+}
 
 .slider
 {
@@ -7,9 +15,9 @@
   flex-direction:row;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 70%;
   /* max-width: 800px; */
-  height: 100vh;
+  height: 500px;
   overflow: hidden;
   position: relative;
   top: 50px;
